December 2020 7.4
  - LAM Pro:
   -> MIT Kerberos policies support
   -> User self registration: added admin approval option and info mail for user after creation


22.09.2020 7.3
  - PHP 7.4 compatibility
  - Configuration export and import
  - Server profiles support to specify a part of the DN to hide
  - Show password prompt when a user with expired password logs into LAM admin interface (requires PHP 7.2)
  - Better error messages on login when account is expired/deactivated/...
  - Personal/Windows: photo can be uploaded via webcam
  - Windows users: group display format can be configured (cn/dn)
  - Support PBKDF2-SHA512 password hashes
  - LAM Pro:
   -> Windows: new cron job to send users a summary of their managed groups
  - Fixed bugs:
   -> Unix groups: memberUid was not deleted correctly when forced sync with group of names is active


01.05.2020 7.2
  - Unix: allow to create group with same name during user creation
  - LAM Pro:
   -> EMail sending can be done via SMTP without local mail server
   -> License expiration warning can be sent via email or disabled
  - Fixed bugs:
   -> Captcha don't show anymore in Self Service login page (213)
   -> Unix memberships cannot be changed. This issue can also affect other membership relations.
   -> Missing locales on Docker image


17.03.2020 7.1
  - PHP 7 required
  - WebAuthn/FIDO2 support for 2-factor-authentication (requires PHP 7.2)
  - IMAP: changed library to support latest TLS versions
  - Personal: support display name (hidden by default in server profile)
  - Windows users: support allowed workstations, more profile options
  - Reactivated Polish translation
  - LAM Pro:
   -> PPolicy: support for password check module
   -> Windows AD LDS support (users and groups)
   -> User self registration: support Active Directory/Samba4


21.12.2019 7.0
  - Lamdaemon can be configured with directory prefix for homedirs
  - Account list filters match on substrings instead of whole value